# sample-agentic-frameworks-on-aws

./: terraform.tfstate
agent-harness/: README.md
eks/agents/a2a/agent/: Dockerfile  k8s.yaml  pyproject.toml
eks/agents/weather/: README.md  pyproject.toml
eks/infrastructure/terraform/: eks.tf  podidentity.tf  versions.tf
eks/manifests/helm/: workshop-agent-weather-values.yaml
eks/scripts/: containers.sh  env.sh  infra.sh  kubernetes.sh  restart-kubernetes.sh  terraform-prep-env-weather-agent.sh  terraform-prep-env-weather-ui.sh  ui.sh  uninstall-kubernetes.sh
eks/terraform/: dynamodb.tf  ecr.tf  eks.tf  main.tf  outputs.tf  podidentity.tf  prep-env-travel-agent.sh  s3.tf  variables.tf  versions.tf
eks/travel/: Dockerfile  README.md  pyproject.toml
eks/travel/helm/: a2a-null.yaml  a2a-remote.yaml  values.yaml
eks/travel/helm/templates/: NOTES.txt  configmap-a2a-agents.yaml  deployment.yaml  service.yaml
eks/travel/helm/templates/tests/: test-connection.yaml
eks/travel/src/: agent.py  agent_server_fastapi.py  main.py
eks/ui/: pyproject.toml
eks/ui/helm/: workshop-ui-values.yaml
eks/weather/: README.md
eks/weather/scripts/: kubernetes.sh
eks/weather/web/: app.py  oauth.py
langchain/deep-research/: pyproject.toml
langchain/financial-agent/: package-lock.json  package.json
langchain/shopping-agent/: README.md  pyproject.toml
langgraph/cybersecurity-ai-platform/: docker-compose.yml  run.sh  simple_test.py
langgraph/music-store-assistant/: .env.example  README.md  multi_agent.ipynb
llamaindex/agentcore-kyc-workflow/: README.md
(+10 files in other folders)
