[project]
name = "travel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.2.14",
    "boto3>=1.39.9",
    "google>=3.0.0",
    "google-api-python-client>=2.176.0",
    "grpcio>=1.73.1",
    "protobuf>=6.31.1",
    "python-a2a>=0.5.9",
    "strands-agents-tools[a2a-client]>=0.2.1",
    "strands-agents[a2a]>=1.0.1",
]

[project.scripts]
"fastapi-server"   = "src.main:main_fastapi"
"interactive"      = "src.main:main_interactive"
"agent"            = "src.main:servers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

